# TODO

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  index.html  list  pyproject.toml  tasks.db  tasks.db-journal
.github/workflows/: ci.yml
src/: config.py  error.py  main.py
src/auth/: auth_jwt.py  config.py  fake_db.py
src/data/: #__init__.txt  __init__.py  config.py  crud.py  crud_db.py  tasks.py
src/model/: tasks.py
src/service/: tasks.py
src/user_db/: crud_db.py
src/web/: tasks.py
tests/: 1test_create.py  1test_delete.py  1test_get_all.py  1test_get_one.py  1test_web.py  2test_get_one.py  2test_update.py  5test_login.py  conftest.py  test_auth.py  test_create.py  test_delet.py  test_delete.py  test_get_all.py  test_get_one.py  test_login.py  test_update.py  test_web.py  token_and_data.py
