[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "sqlalchemy>=2.0.44",
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.2.12",
    "python-jose>=3.5.0",
    "uvicorn"
]
